# ESPHome-Relay

./: README.md  repository.yaml
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/actions/version-bump/: action.yml
.github/workflows/: build-addon.yml  ci.yml  release.yml
esphome-relay/: CHANGELOG.md  Cargo.toml  DOCS.md  Dockerfile  config.yaml  run.sh
esphome-relay/src/: cache.rs  config.rs  github.rs  main.rs  server.rs  status.rs  webhook.rs
scripts/: validate_config.py
